<resources>
    <string name="app_name">Kids_math</string>
    <string name="activity_main_aim">Реши ещё %1$s примеров без ошибок, чтобы закончить упражнение</string>
    <string name="activity_main_aim_Finish">Молодец! Упражнение успешно выполнено</string>
    <string name="activityMainTask">%1$s %2$s %3$s = %4$s</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="ButtonOK">"OK"</string>
    <string name="ButtonBackspace">"<![CDATA[<-"]]></string>
    <string name="errorDialogTitle">Ошибка</string>
    <string name="buttonUnder">Понятно</string>
</resources>