<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/SmallMargin">

    <TextView
        android:id="@+id/aim"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="@dimen/SmallMargin"
        android:background="@color/widgeBackground"
        android:gravity="center"
        android:padding="@dimen/textViewPadding"
        android:text="@string/activity_main_aim"
        android:textColor="@color/textColor"
        android:textSize="@dimen/aimTextSize" />

    <TextView
        android:id="@+id/task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/SmallMargin"
        android:background="@color/taskBackground"
        android:gravity="center"
        android:padding="@dimen/textViewPadding"
        android:text="@string/activityMainTask"
        android:textColor="@color/textColor"
        android:textSize="@dimen/taskTextSize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/SmallMargin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Button1"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button1" />


        <TextView
            android:id="@+id/Button2"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button2" />

        <TextView
            android:id="@+id/Button3"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/SmallMargin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Button4"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button4" />


        <TextView
            android:id="@+id/Button5"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button5" />

        <TextView
            android:id="@+id/Button6"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/SmallMargin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Button7"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button7" />


        <TextView
            android:id="@+id/Button8"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button8" />

        <TextView
            android:id="@+id/Button9"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/SmallMargin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ButtonBackspace"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/ButtonBackspace" />


        <TextView
            android:id="@+id/Button0"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_marginEnd="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/Button0" />

        <TextView
            android:id="@+id/ButtonOK"
            style="@style/ButtonTextStyle.green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tinyMargin"
            android:layout_weight="1"
            android:text="@string/ButtonOK" />

    </LinearLayout>

</LinearLayout>